# vkx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  readme.md
VkxApplication/: CMakeLists.txt  main.cpp
include/vkx/: AABB.hpp  aabb.hpp  application.hpp  camera.hpp  debug.hpp  events.hpp  instance.hpp  node.hpp  pch.hpp  player.hpp  raycast.hpp  sdl.hpp  vkx.hpp  vkx_types.hpp  window.hpp
include/vkx/dual_contour/: qef.hpp  svd.hpp
include/vkx/renderer/: allocator.hpp  buffer.hpp  buffers.hpp  commands.hpp  image.hpp  model.hpp  pipeline.hpp  queue_config.hpp  renderer.hpp  swapchain.hpp  swapchain_info.hpp  texture.hpp  types.hpp  uniform_buffer.hpp  vertex.hpp  viewport.hpp
include/vkx/renderer/core/: allocable.hpp  allocator.hpp  allocator.inl  bootstrap.hpp  commands.hpp  context.hpp  device.hpp  physical_device.hpp  pipeline.hpp  profile.hpp  queue_config.hpp  renderer_base.hpp  renderer_types.hpp  swapchain.hpp  swapchain_info.hpp  sync_objects.hpp  vertex.hpp
include/vkx/renderer/memory/: allocator.hpp  unique.hpp
include/vkx/renderer/pipeline/: compute.hpp  graphics.hpp  pipeline.hpp
include/vkx/util/: multi_dimensional.hpp
include/vkx/voxels/: voxel.hpp  voxel_mask.hpp  voxel_matrix.hpp  voxel_types.hpp  voxels.hpp
lib/: CMakeLists.txt
lib/include/: application.hpp  camera.hpp  macros.hpp  pch.hpp  window.hpp
lib/include/renderer/: buffer.hpp  image.hpp  model.hpp  texture.hpp  uniform_buffer.hpp
lib/include/renderer/core/: allocable.hpp  commands.hpp  context.hpp  device.hpp  pipeline.hpp  profile.hpp  queue_config.hpp  renderer_base.hpp  renderer_types.hpp  swapchain.hpp  swapchain_info.hpp  vertex.hpp  vertex.inl
lib/include/util/: multi_dimensional.hpp  observer.hpp
lib/include/voxels/: greedy_mask.hpp  voxel.hpp  voxel_mask.hpp  voxel_matrix.hpp  voxel_types.hpp  voxels.hpp
lib/shaders/src/: shader.comp  shader.frag  shader.vert
lib/src/: CMakeLists.txt  application.cpp  camera.cpp  main.cpp  window.cpp
lib/src/renderer/: CMakeLists.txt  CMakelists.txt  buffer.cpp  image.cpp  model.cpp  texture.cpp
lib/src/renderer/core/: CMakeLists.txt  commands.cpp  context.cpp  debug.cpp  debug.hpp  device.cpp  pipeline.cpp  profile.cpp  queue_config.cpp  renderer_base.cpp  swapchain.cpp  swapchain_info.cpp
lib/src/voxels/: CMakeLists.txt  greedy_mask.cpp  voxel_matrix.cpp  voxels.cpp
shaders/src/: greedy.comp  highlight.frag  highlight.vert  shader.frag  shader.vert  shader2D.frag  shader2D.vert
src/: CMakeLists.txt  aabb.cpp  application.cpp  camera.cpp  events.cpp  instance.cpp  main.cpp  ray_cast.cpp  raycast.cpp  sdl.cpp  vkx_exceptions.cpp  window.cpp
src/dual_contour/: CMakeLists.txt  density.cpp  qef.cpp  svd.cpp
src/renderer/: CMakeLists.txt  allocator.cpp  buffer.cpp  buffers.cpp  commands.cpp  graphics.cpp  image.cpp  model.cpp  pipeline.cpp  queue_config.cpp  renderer.cpp  swapchain.cpp  swapchain_info.cpp  sync_objects.cpp  texture.cpp  vertex.cpp  viewport.cpp
src/renderer/core/: CMakeLists.txt  allocator.cpp  bootstrap.cpp  commands.cpp  context.cpp  debug.cpp  device.cpp  physical_device.cpp  pipeline.cpp  profile.cpp  queue_config.cpp  renderer_base.cpp  swapchain.cpp  swapchain_info.cpp  sync_objects.cpp  vertex.cpp
src/renderer/memory/: CMakeLists.txt  allocator.cpp
src/renderer/pipeline/: CMakeLists.txt  compute.cpp  graphics.cpp  pipeline.cpp
src/voxels/: CMakeLists.txt  greedy_mask.cpp  voxel_matrix.cpp  voxels.cpp
vkx/: CMakeLists.txt
vkx/include/: application.hpp  camera.hpp  ecs.hpp  pch.hpp  scene.hpp  vkx.hpp  vkx_exceptions.hpp  vkx_types.hpp  window.hpp
vkx/include/renderer/: buffer.hpp  image.hpp  model.hpp  texture.hpp  uniform_buffer.hpp  viewport.hpp
vkx/include/renderer/core/: commands.hpp  context.hpp  device.hpp  physical_device.hpp  pipeline.hpp  profile.hpp  queue_config.hpp  renderer_base.hpp  renderer_types.hpp  swapchain.hpp  swapchain_info.hpp  sync_objects.hpp  vertex.inl
vkx/include/util/: multi_dimensional.hpp  observer.hpp
vkx/include/vkx/: application.hpp  camera.hpp  debug.hpp  macros.hpp  ray_cast.hpp  raycast.hpp  scene.hpp  vkx.hpp  vkx_exceptions.hpp  window.hpp
vkx/include/vkx/dual_contour/: density.hpp  octree.hpp
vkx/include/vkx/renderer/: image.hpp
vkx/include/vkx/renderer/core/: commands.hpp  device.hpp  pipeline.hpp  queue_config.hpp  renderer_base.hpp  renderer_types.hpp  swapchain_info.hpp  sync_objects.hpp
vkx/include/vkx/voxels/: greedy_mask.hpp  voxel_mask.hpp  voxel_types.hpp
vkx/include/voxels/: greedy_mask.hpp  voxel.hpp  voxel_mask.hpp  voxel_matrix.hpp  voxels.hpp
vkx/shaders/src/: shader.comp  shaders.sprj
vkx/src/: AABB.cpp  CMakeLists.txt  application.cpp  camera.cpp  scene.cpp  vkx_exceptions.cpp  window.cpp
vkx/src/dual_contour/: octree.cpp
vkx/src/renderer/: CMakeLists.txt  buffer.cpp  image.cpp  model.cpp  texture.cpp  viewport.cpp
vkx/src/renderer/core/: CMakeLists.txt  commands.cpp  context.cpp  debug.cpp  debug.hpp  device.cpp  physical_device.cpp  pipeline.cpp  profile.cpp  queue_config.cpp  renderer_base.cpp  swapchain.cpp  swapchain_info.cpp  sync_objects.cpp
vkx/src/voxels/: CMakeLists.txt  greedy_mask.cpp  voxel_matrix.cpp  voxels.cpp
vkx_app/: CMakeLists.txt  main.cpp
